Comandos basicos de titulo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Primeros pasos GIT</title>
 </head>
 <body>
-    <h1>Primeros paso en GIT</h1>
+    <h1>
+        Primeros paso en GIT - Comandos Basicos
+    </h1>
 </body>
 </html>
