Se añadio dos parrafos de la explicacion de los comandos

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>
         Primeros paso en GIT - Comandos Basicos
     </h1>
+    <p>Comando basicos en GIT git init: Para inicializar un nuevo repositorio</p>
+    <p>Comando basicos en GIT git add: Comando para añadir el archivo a espera de su produccion</p>
 </body>
 </html>
