--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     </h1>
     <p>Comando basicos en GIT git init: Para inicializar un nuevo repositorio</p>
     <p>Comando basicos en GIT git add: Comando para añadir el archivo a espera de su produccion</p>
+    <h3>GIT COMMIT</h3>
+    <p>Comandos que nos sirven para subri nuestro archivo a nuestro repositorio con una nueva version</p>
 </body>
 </html>
