--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>Comando basicos en GIT git add: Comando para añadir el archivo a espera de su produccion</p>
     <h3>GIT COMMIT</h3>
     <p>Comandos que nos sirven para subri nuestro archivo a nuestro repositorio con una nueva version</p>
+    <br>
+    <p>ACTUALIZACIONES NUEVAS</p>
 </body>
 </html>
