Rama cuerpo actualizacion

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <p>Comando basicos en GIT git init: Para inicializar un nuevo repositorio</p>
     <p>Comando basicos en GIT git add: Comando para añadir el archivo a espera de su produccion</p>
     <h3>GIT COMMIT</h3>
-<<<<<<< HEAD
     <p>Comandos que nos sirven para subir nuestro archivo a nuestro repositorio con una nueva version</p>
     <p> nuevalinea  </p>
     <p>Cambios nuevos</p>
+    <br>
+    <p>Actualizacion nuevas Ramas</p>
 
 </body>
 </html>
